# BOEF--RAIL

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_RELEASE_PLAN.md  README.md  SECURITY.md  sitecustomize.py
python-app/: AGENTS.md  BOEF.spec  BOEF_CAPABILITY_MATRIX.md  README.md  alembic.ini  boef  pyproject.toml  sitecustomize.py
python-app/app/: __init__.py  __main__.py  custom_chart.py  design_alternatives_dialog.py  export_helpers.py  help_content.py  main.py  sensitivity_dialog.py
python-app/core/: __init__.py  __main__.py  analysis.py  analysis_engine.py  cli.py  envelope.py  exports.py  foundation_profiles.py  load_builder.py  model.py  sensitivity.py  solver.py  stress_metrics.py  track_modulus.py  transition.py  units.py
python-app/db/: __init__.py  __main__.py  cli.py  crud.py  migration.py  models.py  project_io.py  seed.py
python-app/docs/: BOEF_ENGINEERING_REFERENCE.md  dynamic-analysis.md  multilayer-and-timoshenko.md
python-app/resources/: icon-windowed.icns
python-app/scripts/: build_macos_app.sh
python-app/tests/: __init__.py  conftest.py  test_analysis.py  test_analysis_engine.py  test_analysis_integration.py  test_analysis_regression.py  test_boef_runner.py  test_core.py  test_core_cli.py  test_custom_chart.py  test_db_crud.py  test_db_integration.py  test_dipped_joint_analysis.py  test_dynamic_critical_speed.py  test_dynamic_solver.py  test_dynamic_transition.py  test_dynamic_vs_static_limit.py  test_envelope.py  test_exports.py  test_foundation_models.py  test_load_builder.py  (+10 more)
(+36 files in other folders)
